--- a/index.html
+++ b/index.html
@@ -13,15 +13,48 @@
       <div>
         <ul id="nav-link">
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="cart.html">Cart</li>
+          <!-- <li><a href="shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li> -->
+          <li><a  href="about.html">About</a></li>
+          <!-- <li><a href="contact.html">Contact</a></li>
+          <li><a href="cart.html">Cart</a></li> -->
         </ul>
       </div>
     </section>
-
+    <section id="hero">
+        <h4>Trade-in-offer</h4>
+        <h2>Super Value deals</h2>
+        <h1>On all Products</h1>
+        <p>Save more with coupons & up to 70%</p>
+        <button>Shop Now</button>
+    </section>
+    <section id="feature" class="fe-box-padding" >
+      <div class="fe-box">
+        <img src="https://cdn.pixabay.com/photo/2017/06/07/18/35/design-2381160_1280.png" alt="">
+        <h6>Add to shopping</h6>
+      </div>
+      <div class="fe-box">
+        <img src="https://cdn.pixabay.com/photo/2018/09/11/17/38/delivery-3670118_1280.jpg" alt="">
+        <h6>Online Order</h6>
+      </div><div class="fe-box">
+        <img src="https://cdn.pixabay.com/photo/2019/03/20/12/42/money-4068357_1280.png" alt="">
+        <h6>Save Money</h6>
+      </div><div class="fe-box">
+        <img src="https://cdn.pixabay.com/photo/2021/03/29/18/57/social-media-6134993_1280.png" alt="">
+        <h6>Promotions</h6>
+      </div><div class="fe-box">
+        <img src="https://cdn.pixabay.com/photo/2018/10/15/15/07/purchase-3749193_1280.png" alt="">
+        <h6>Happy Sale</h6>
+      </div><div class="fe-box">
+        <img src="https://cdn.pixabay.com/photo/2018/10/17/20/06/reaching-3754844_1280.png" alt="">
+        <h6>F24/7 Support</h6>
+      </div>
+    </section>
+    <section id="banner" class="section-m1" >
+      <h4>Repair Service</h4>
+      <h2>Upto <span>70% off</span> - All the Clothes</h2>
+      <button class="normal">Explore More</button>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
